[package]
name = "group-signatures"
version = "0.1.0"
authors = ["Jim Posen <jim.posen@gmail.com>"]
edition = "2018"

[dependencies]
blake2 = "^0.8"
ff = { git = "https://github.com/zcash/librustzcash" }
group = { git = "https://github.com/zcash/librustzcash" }
pairing = { git = "https://github.com/zcash/librustzcash" }
rand = "0.4"
